Move collect data sync test page into "test" folder

--- a/calc-webapp/src/main/webapp/test/upload.html
+++ b/calc-webapp/src/main/webapp/test/upload.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Please upload a file</h1>
-        <form method="post" action="rest/collect/data.json" enctype="multipart/form-data">
+        <form method="post" action="/calc/rest/collect/data.json" enctype="multipart/form-data">
         	<input type="hidden" name="workspaceId" value="1" />
             <input type="file" name="file"/>
             <input type="submit"/>
