created section template for ui components

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -28,7 +28,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand">Open Foris Calc</a>
+				<a href="index.html" class="navbar-brand"><img src="img/of-logo.png" width="28px"/>pen Foris Calc</a>
 				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
@@ -39,54 +39,12 @@
 	<div class="container">
 	
 		<div id="page">
-			<!-- ====== Settings section ==== -->
-			<div class="row row-section">
-				<div class="col-xs-12 col-md-1 menu">
-<!-- 					<ul class="nav nav-pills"> -->
-<!-- 						<li class="active"> -->
-<!-- 							<a href="settings.html">Settings -->
-<!-- 								<span class="badge"></span> -->
-<!-- 							</a> -->
-<!-- 						</li> -->
-<!-- 					</ul> -->
-					<span class="label label-default settings-menu"><a href="settings.html">Settings</a></span>
-<!-- 					<a href="settings.html">Settings</a> -->
-				</div>
-				<div class="col-xs-12 col-md-11 links-container">
-					<div class="label label-success home-label-link" href="sd.html">Sampling<br/>Design</div>					
-				</div>
-			</div>
-			<!-- ====== Data section ==== -->
-			<div class="row row-section">
-				<div class="col-xs-12 col-md-1 menu">
-					<span class="label label-default settings-menu">Data</span>
-				</div>
-				<div class="col-xs-12 col-md-11 links-container">
-					<div class="label label-success home-label-link" href="synccollect.html">Collect<br/>Sync</div>					
-				</div>
-			</div>
+		
 			
-			<!-- ====== Calculation section ==== -->
-			<div class="row row-section">
-				<div class="col-xs-12 col-md-1 menu">
-					<span class="label label-default settings-menu">Calculation</span>
-				</div>
-				<div class="col-xs-12 col-md-11 links-container">
-					<div class="label label-success home-label-link" href="synccollect.html">Tree<br/>Height</div>					
-				</div>
-			</div>
-			<!-- ====== Results section ==== -->
-			<div class="row row-section">
-				<div class="col-xs-12 col-md-1 menu">
-					<span class="label label-default settings-menu">Results</span>
-				</div>
-				<div class="col-xs-12 col-md-11 links-container">
-					<div class="label label-success home-label-link" href="synccollect.html">Bo</div>					
-				</div>
-			</div>
 		</div>
+		<!-- End page -->
 	</div>	
-
+	<!-- End container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
