added font-awesome and navigation menu into section pages

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -10,8 +10,8 @@
 
     <!-- Bootstrap core CSS -->
    	<link rel="stylesheet" href="css/bootstrap.css" media="screen">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootswatch.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	
 	<!-- ==== Custom style ==== -->
 	<link rel="stylesheet" href="css/calc.css">
@@ -24,20 +24,29 @@
   </head>
 
 <body>
-  
+  	
+  	<!-- Start header -->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<a href="index.html" class="navbar-brand"><img src="img/of-logo.png" width="28px"/>pen Foris Calc</a>
-				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-				</button>
+<!-- 				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main"> -->
+<!-- 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> -->
+<!-- 				</button> -->
 			</div>
 		</div>
 	</div>
-
+	<!-- End header -->
+	
 	<div class="container">
 	
+		<ul class="breadcrumb">
+			<li>
+				<a href="home.html"><i class="icon-home"></i> Home</a>
+			</li>
+<!-- 			<li class="active">Library</li> -->
+		</ul>
+		
 		<div id="page">
 		
 			
