--- a/calc-webapp/src/main/webapp/home.html
+++ b/calc-webapp/src/main/webapp/home.html
@@ -6,7 +6,7 @@
 		</span>
 	</div>
 	<div class="col-xs-12 col-md-11 links-container">
-		<div class="label label-success home-label-link" href="sd.html">Sampling<br/>Design</div>					
+		<div class="label label-success home-label-link" href="sampling-design.html">Sampling<br/>Design</div>					
 	</div>
 </div>
 
@@ -42,12 +42,11 @@
 
 <script>
 $(document).ready(function(){
-	console.log('wtf');
 	$(".row-section .links-container div").bind("click", function(event) {
 		event.preventDefault();
 		
 		$href = $(this).attr("href");
-		console.log($href);
+		loadPage($href);
 	
 	});
 });
