collect upload backup page

--- a/calc-webapp/src/main/webapp/home.html
+++ b/calc-webapp/src/main/webapp/home.html
@@ -16,7 +16,7 @@
 		<span class="label label-default settings-menu">Data</span>
 	</div>
 	<div class="col-xs-12 col-md-11 links-container">
-		<div class="label label-success home-label-link" href="synccollect.html">Collect<br/>Sync</div>					
+		<div class="label label-success home-label-link" href="collect-sync.html">Collect<br/>Sync</div>					
 	</div>
 </div>
 
@@ -47,7 +47,6 @@ $(document).ready(function(){
 		
 		$href = $(this).attr("href");
 		loadPage($href);
-	
 	});
 });
 </script>
