--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand"><img src="img/of-logo.png" width="28px"/>pen Foris Calc</a>
+				<a href="index.html" class="navbar-brand"><img src="img/of-logo.png" width="32px" />pen Foris Calc</a>
 <!-- 				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main"> -->
 <!-- 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> -->
 <!-- 				</button> -->
@@ -48,7 +48,7 @@
 		</ul>
 		
 		<div id="page">
-		
+			<!-- All components are loaded here -->
 			
 		</div>
 		<!-- End page -->
@@ -59,6 +59,7 @@
     ================================================== -->
 	
 	<script src="./js/jquery.min.js"></script>
+	<script src="./js/jquery.form.min.js"></script>	
 	<script src="./js/bootstrap.min.js"></script>
 	
 	<!-- ==== Custom javascript -->
