--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -29,10 +29,9 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand"><img src="img/of-logo.png" width="32px" />pen Foris Calc</a>
-<!-- 				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main"> -->
-<!-- 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> -->
-<!-- 				</button> -->
+				<a href="home.html" class="navbar-brand">
+					<img src="img/of-logo.png" width="28px" />pen Foris Calc
+				</a>
 			</div>
 		</div>
 	</div>
@@ -44,7 +43,6 @@
 			<li>
 				<a href="home.html"><i class="icon-home"></i> Home</a>
 			</li>
-<!-- 			<li class="active">Library</li> -->
 		</ul>
 		
 		<div id="page">
