--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -52,13 +52,46 @@
 		<!-- End page -->
 	</div>	
 	<!-- End container -->
-
+	
+	
+	<!-- ==== Job Status modal section ==== -->
+	<div class="modal fade" id="job-status">
+	 <div class="modal-dialog">
+	   <div class="modal-content">
+	     <div class="modal-header">
+	       <h4 class="modal-title"></h4>
+	     </div>
+	     <div class="modal-body">
+	     	
+	     </div>
+	     <div class="modal-footer hide">
+	       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+<!-- 	       <button type="button" class="btn btn-primary">Save changes</button> -->
+	     </div>
+	   </div><!-- /.modal-content -->
+	 </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
+	
+	
+	<div class="row task-status hide">
+   		<div class="col-md-1 number"></div>
+   		<div class="col-md-2 name"></div>
+   		<div class="col-md-8">
+   			<div class="progress"> 
+				<div class="progress-bar"></div>
+			</div>
+   		</div> 
+   		<div class="col-md-1 percent">
+   		</div>
+	</div>
+	
     <!-- Bootstrap core JavaScript
     ================================================== -->
 	
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/jquery.form.min.js"></script>	
 	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/modal.js"></script>
 	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
