template form for calculation step editor

--- a/calc-webapp/src/main/webapp/home.html
+++ b/calc-webapp/src/main/webapp/home.html
@@ -25,9 +25,12 @@
 	<div class="col-xs-12 col-md-1 menu">
 		<span class="label label-default settings-menu">Calculation</span>
 	</div>
+<!-- 	<div class="col-xs-12 col-md-11 links-container"> -->
+<!-- 		<div class="label label-success home-label-link" href="synccollect.html">Tree<br/>Height</div>					 -->
+<!-- 	</div> -->
 	<div class="col-xs-12 col-md-11 links-container">
-		<div class="label label-success home-label-link" href="synccollect.html">Tree<br/>Height</div>					
-	</div>
+		<div class="label label-success home-label-link" href="step-edit.html"><i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i></div>					
+	</div>	
 </div>
 
 <!-- ====== Results section ==== -->
