--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -47,11 +47,11 @@
 		
 		<div id="page">
 			<!-- All components are loaded here -->
-			
 		</div>
-		<!-- End page -->
+		
 	</div>	
 	<!-- End container -->
+
 
 
 	<!-- ==== Job Status modal section ==== -->
@@ -80,6 +80,9 @@
    		<div class="col-md-1 percent">
    		</div>
 	</div>
+	<!-- ==== End Job Status modal section ==== -->
+	
+	
 	
     <!-- Bootstrap core JavaScript
     ================================================== -->
