--- a/calc-webapp/src/main/webapp/section-template.html
+++ b/calc-webapp/src/main/webapp/section-template.html
@@ -1,12 +1,12 @@
-<!-- ==== Html here === -->
-<div class="row">
+<div class="page-section">
 
+	<!-- ==== Everything has to go inside page-section === -->
+	
+	<script>
+	$(function(){
+		
+		// Javascript here
+		
+	});
+	</script>
 </div>
-
-<script>
-$(document).ready(function(){
-	
-	// Javascript here
-	
-});
-</script>
