--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -1,10 +1,14 @@
 <!-- ==== Html here === -->
-<div class="row">
-	<div class="col-lg-12">
-		<div class="well">
-			<form id="step-form" class="bs-example form-horizontal">
+<div class="page-section">
+	<div class="row">
+		<div class="col-md-3">
+		</div>
+		<div class="col-md-6">
+		
+<!-- 		<div class="well"> -->
+			<form id="step-form" class="form-horizontal">
 				<fieldset>
-					<legend>Calculation Step Editor</legend>
+					Calculation Step Editor
 					<div class="form-group">
 						<label for="name" class="col-lg-2 control-label">Name</label>
 						<div class="col-lg-10">
@@ -23,7 +27,7 @@
 							<select class="form-control" name="variable" disabled="disabled"></select>
 						</div>
 						<div class="col-lg-1">
-							<button name="add-variable" class="btn btn-info" >
+							<button name="add-variable" class="calculation btn btn-info" >
 								<i class="icon-plus-sign-alt" style="font-size: 22px;"></i>
 							</button>
 						</div>
@@ -51,19 +55,21 @@
 					</div>
 					<div class="form-group buttons">
 						<div class="col-lg-1 col-lg-offset-2">
-							<button type="submit" class="btn btn-primary">Save</button>
+							<button type="submit" class="btn btn-default btn-lg">Save</button>
 							
 						</div>
 						<div class="col-lg-2">
-							<button class="btn btn-default cancel">Cancel</button>
+							<button class="btn btn-default cancel btn-lg">Cancel</button>
 						</div>
 					</div>
 				</fieldset>
 			</form>
 		</div>
+		<div class="col-md-3">
+		</div>
+<!-- 		</div> -->
 	</div>
-</div>
-
+	
 <script>
 $(function(){
 	$stepForm = $('#step-form');
@@ -117,3 +123,4 @@ $(function(){
 	
 });
 </script>
+</div>
