--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -26,9 +26,9 @@
 						<div class="col-lg-9">
 							<select class="form-control" name="variable" disabled="disabled"></select>
 						</div>
-						<div class="col-lg-1">
-							<button name="add-variable" class="calculation btn btn-info" >
-								<i class="icon-plus-sign-alt" style="font-size: 22px;"></i>
+						<div class="no-padding col-lg-1">
+							<button name="add-variable" class="calculation btn btn-info">
+								<i class="icon-plus-sign-alt"></i>
 							</button>
 						</div>
 					</div>
