--- a/calc-webapp/src/main/webapp/index-dev.html
+++ b/calc-webapp/src/main/webapp/index-dev.html
@@ -33,7 +33,7 @@
  				</button>
  				<button type="button" class="btn btn-default btn-home">Tree height</button>
 	  		</div>
-	  		<div class="row row3"></div>
+<!-- 	  		<div class="row row3"></div> -->
   		</div>
  	</div>
  	
@@ -103,7 +103,7 @@
 				</div>
 				<div class="modal-body"></div>
 				<div class="modal-footer hide">
-					<button type="button" class="btn btn-default" data-dismiss="#job-status">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
 				</div>
 			</div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
