--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -54,13 +54,13 @@
 						
 					</div>
 					<div class="form-group buttons">
-						<div class="col-lg-1 col-lg-offset-2">
+						<div class="col-lg-12" style="text-align: center;">
 							<button type="submit" class="btn btn-default btn-lg">Save</button>
 							
 						</div>
-						<div class="col-lg-2">
-							<button class="btn btn-default cancel btn-lg">Cancel</button>
-						</div>
+<!-- 						<div class="col-lg-2"> -->
+<!-- 							<button class="btn btn-default cancel btn-lg">Cancel</button> -->
+<!-- 						</div> -->
 					</div>
 				</fieldset>
 			</form>
