--- a/calc-webapp/src/main/webapp/index-dev.html
+++ b/calc-webapp/src/main/webapp/index-dev.html
@@ -134,6 +134,7 @@
 			</div>
 			<div class="col-md-8" >
 				<div class="links">
+				
 					<button type="button" class="calculation btn btn-default" href="#calculation">Calculation</button>
 					<button type="button" class="results btn btn-default" href="#results">Results</button>
 					<button type="button" class="data btn btn-default" href="#data">Data</button>
@@ -158,8 +159,10 @@
 	<script src="./js/jquery-ui-effects.js"></script>	
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/modal.js"></script>
+	<script src="./js/tooltip.js"></script>
 	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc-dev.js"></script>
+	
 </body>
 </html>
