Validation message tooltip (work in progress)

--- a/calc-webapp/src/main/webapp/index-dev.html
+++ b/calc-webapp/src/main/webapp/index-dev.html
@@ -163,6 +163,7 @@
 	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc-dev.js"></script>
+	<script src="./js/calc-form.js"></script>
 	
 </body>
 </html>
