--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -34,7 +34,7 @@
 					</div>
 					<div class="form-group">
 <!-- 						<div class="row"> -->
-							<label class="col-md-2 control-label">Formula</label>
+							<label class="col-md-2 control-label">Script</label>
 							<div class="col-md-10">
 								
 								<!-- Formula editor -->
@@ -50,7 +50,7 @@
 								</div>
 								
 								<div class="row" style="margin-top: 5px;">
-									<textarea class="form-control" rows="13" name="formula"></textarea>
+									<textarea class="form-control" rows="13" name="script"></textarea>
 								</div>
 <!-- 										<span class="help-block">A longer block of help text -->
 <!-- 											that breaks onto a new line and may extend beyond one line.</span> -->
